RESOLVED FIXED241627
ServiceWorkerFetch::dispatchFetchEvent active registration assert is no longer true
https://bugs.webkit.org/show_bug.cgi?id=241627
Summary ServiceWorkerFetch::dispatchFetchEvent active registration assert is no longe...
youenn fablet
Reported 2022-06-15 00:46:56 PDT
Now that we go through main thread for registration change state and directly to worker thread for fetch events, the assert is no longer true. While we might want to go off the main thread for registration change state, we might want to remove the assert in the meantime.
Attachments
Radar WebKit Bug Importer
Comment 2 2022-06-22 00:47:12 PDT
youenn fablet
Comment 3 2022-07-05 06:04:11 PDT
*** Bug 242229 has been marked as a duplicate of this bug. ***
youenn fablet
Comment 4 2022-07-05 06:11:33 PDT
EWS
Comment 5 2022-07-05 15:04:13 PDT
Committed 252152@main (57b6a2102bd2): <https://commits.webkit.org/252152@main> Reviewed commits have been landed. Closing PR #2077 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.