ServiceWorkerFetch::dispatchFetchEvent active registration assert is no longer true https://bugs.webkit.org/show_bug.cgi?id=241627 rdar://problem/95670031

Reviewed by Chris Dumez.

Update the assert to account for the potential race condition between fetch event messages
and messages to update the registration from activating to activated.

* Source/WebCore/workers/service/context/ServiceWorkerFetch.cpp:
(WebCore::ServiceWorkerFetch::dispatchFetchEvent):

Canonical link: https://commits.webkit.org/252152@main