Source/WebCore/workers/service/context/ServiceWorkerFetch.cpp
@@ -170,7 +170,8 @@ void dispatchFetchEvent(Ref<Client>&& client, ServiceWorkerGlobalScope& globalSc
 
     ASSERT(globalScope.registration().active());
     ASSERT(globalScope.registration().active()->identifier() == globalScope.thread().identifier());
-    ASSERT(globalScope.registration().active()->state() == ServiceWorkerState::Activated);
+    // FIXME: we should use the same path for registration changes as for fetch events.
+    ASSERT(globalScope.registration().active()->state() == ServiceWorkerState::Activated || globalScope.registration().active()->state() == ServiceWorkerState::Activating);
 
     auto* formData = request.httpBody();
     std::optional<FetchBody> body;
